crates/parsing/tests/snapshots/parser__module_export_invalid.snap
---
source: crates/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..53
      ModuleHeader@0..53
        MODULE@0..6 "module"
        Comment@6..7
          WHITESPACE@6..7 " "
        ModuleName@7..27
          UPPER@7..26 "ModuleExportInvalid"
          Comment@26..27
            WHITESPACE@26..27 " "
        ModuleExportList@27..47
          LEFT_PARENTHESIS@27..28 "("
          ModuleExportValue@28..33
            LOWER@28..33 "hello"
          COMMA@33..34 ","
          Comment@34..35
            WHITESPACE@34..35 " "
          ERROR@35..38
            ERROR@35..35 ""
            INTEGER@35..38 "123"
          ERROR@38..40
            ERROR@38..38 ""
            COMMA@38..39 ","
            Comment@39..40
              WHITESPACE@39..40 " "
          ModuleExportValue@40..45
            LOWER@40..45 "world"
          RIGHT_PARENTHESIS@45..46 ")"
          Comment@46..47
            WHITESPACE@46..47 " "
        WHERE@47..52 "where"
        Comment@52..53
          WHITESPACE@52..53 "\n"
      LAYOUT_START@53..53 ""
      ModuleImports@53..53
      ModuleStatements@53..53
      LAYOUT_END@53..53 ""
      END_OF_FILE@53..53 ""
    ,
    [
        ParseError {
            position: Position {
                offset: 35,
                line: 1,
                column: 36,
            },
            message: "Invalid token",
        },
        ParseError {
            position: Position {
                offset: 38,
                line: 1,
                column: 39,
            },
            message: "Invalid token",
        },
    ],
)
