crates/parsing/tests/snapshots/parser__module_export_type_operator_error_end.snap
---
source: crates/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..53
      ModuleHeader@0..53
        MODULE@0..6 "module"
        Comment@6..7
          WHITESPACE@6..7 " "
        ModuleName@7..40
          UPPER@7..39 "ModuleExportTypeOpera ..."
          Comment@39..40
            WHITESPACE@39..40 " "
        ModuleExportList@40..47
          LEFT_PARENTHESIS@40..41 "("
          ModuleExportTypeOperator@41..45
            TYPE@41..45 "type"
            ERROR@45..45 ""
            ERROR@45..45 ""
          RIGHT_PARENTHESIS@45..46 ")"
          Comment@46..47
            WHITESPACE@46..47 " "
        WHERE@47..52 "where"
        Comment@52..53
          WHITESPACE@52..53 "\n"
      LAYOUT_START@53..53 ""
      ModuleImports@53..53
      ModuleStatements@53..53
      LAYOUT_END@53..53 ""
      END_OF_FILE@53..53 ""
    ,
    [
        ParseError {
            position: Position {
                offset: 45,
                line: 1,
                column: 46,
            },
            message: "expected LEFT_PARENTHESIS",
        },
        ParseError {
            position: Position {
                offset: 45,
                line: 1,
                column: 46,
            },
            message: "expected OPERATOR",
        },
    ],
)
