crates/parsing/tests/snapshots/parser__module_header_prefixed.snap
---
source: crates/parsing/tests/parser.rs
expression: node
snapshot_kind: text
---
Module@0..29
  ModuleHeader@0..28
    MODULE@0..6 "module"
    ModuleName@6..22
      Comment@6..7
        WHITESPACE@6..7 " "
      PREFIX@7..18 "PureScript."
      UPPER@18..22 "Main"
    Comment@22..23
      WHITESPACE@22..23 " "
    WHERE@23..28 "where"
  Comment@28..29
    WHITESPACE@28..29 "\n"
