crates/parsing/tests/snapshots/parser__module_import.snap
---
source: crates/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..285
      ModuleHeader@0..25
        MODULE@0..6 "module"
        ModuleName@6..19
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..19 "ModuleImport"
        Annotation@19..20
          TEXT@19..20 " "
        WHERE@20..25 "where"
      LAYOUT_START@25..25 ""
      ModuleImports@25..284
        ImportStatement@25..41
          Annotation@25..27
            TEXT@25..27 "\n\n"
          IMPORT@27..33 "import"
          ModuleName@33..41
            Annotation@33..34
              TEXT@33..34 " "
            UPPER@34..41 "Prelude"
          ImportList@41..41
          ImportAlias@41..41
        LAYOUT_SEPARATOR@41..41 ""
        ImportStatement@41..58
          Annotation@41..42
            TEXT@41..42 "\n"
          IMPORT@42..48 "import"
          ModuleName@48..58
            Annotation@48..49
              TEXT@48..49 " "
            Qualifier@49..54
              TEXT@49..54 "Data."
            UPPER@54..58 "List"
          ImportList@58..58
          ImportAlias@58..58
        LAYOUT_SEPARATOR@58..58 ""
        ImportStatement@58..79
          Annotation@58..59
            TEXT@58..59 "\n"
          IMPORT@59..65 "import"
          ModuleName@65..71
            Annotation@65..66
              TEXT@65..66 " "
            UPPER@66..71 "Value"
          ImportList@71..79
            Annotation@71..72
              TEXT@71..72 " "
            LEFT_PARENTHESIS@72..73 "("
            ImportValue@73..78
              LOWER@73..78 "value"
            RIGHT_PARENTHESIS@78..79 ")"
          ImportAlias@79..79
        LAYOUT_SEPARATOR@79..79 ""
        ImportStatement@79..106
          Annotation@79..80
            TEXT@79..80 "\n"
          IMPORT@80..86 "import"
          ModuleName@86..92
            Annotation@86..87
              TEXT@86..87 " "
            UPPER@87..92 "Class"
          ImportList@92..106
            Annotation@92..93
              TEXT@92..93 " "
            LEFT_PARENTHESIS@93..94 "("
            ImportClass@94..105
              CLASS@94..99 "class"
              Annotation@99..100
                TEXT@99..100 " "
              UPPER@100..105 "Class"
            RIGHT_PARENTHESIS@105..106 ")"
          ImportAlias@106..106
        LAYOUT_SEPARATOR@106..106 ""
        ImportStatement@106..125
          Annotation@106..107
            TEXT@106..107 "\n"
          IMPORT@107..113 "import"
          ModuleName@113..118
            Annotation@113..114
              TEXT@113..114 " "
            UPPER@114..118 "Type"
          ImportList@118..125
            Annotation@118..119
              TEXT@118..119 " "
            LEFT_PARENTHESIS@119..120 "("
            ImportType@120..124
              UPPER@120..124 "List"
            RIGHT_PARENTHESIS@124..125 ")"
          ImportAlias@125..125
        LAYOUT_SEPARATOR@125..125 ""
        ImportStatement@125..154
          Annotation@125..126
            TEXT@125..126 "\n"
          IMPORT@126..132 "import"
          ModuleName@132..141
            Annotation@132..133
              TEXT@132..133 " "
            UPPER@133..141 "DataList"
          ImportList@141..154
            Annotation@141..142
              TEXT@141..142 " "
            LEFT_PARENTHESIS@142..143 "("
            ImportType@143..153
              UPPER@143..147 "Data"
              TypeItemsList@147..153
                LEFT_PARENTHESIS@147..148 "("
                UPPER@148..149 "A"
                COMMA@149..150 ","
                Annotation@150..151
                  TEXT@150..151 " "
                UPPER@151..152 "B"
                RIGHT_PARENTHESIS@152..153 ")"
            RIGHT_PARENTHESIS@153..154 ")"
          ImportAlias@154..154
        LAYOUT_SEPARATOR@154..154 ""
        ImportStatement@154..180
          Annotation@154..155
            TEXT@154..155 "\n"
          IMPORT@155..161 "import"
          ModuleName@161..169
            Annotation@161..162
              TEXT@161..162 " "
            UPPER@162..169 "DataAll"
          ImportList@169..180
            Annotation@169..170
              TEXT@169..170 " "
            LEFT_PARENTHESIS@170..171 "("
            ImportType@171..179
              UPPER@171..175 "Data"
              TypeItemsAll@175..179
                DOUBLE_PERIOD_OPERATOR_NAME@175..179 "(..)"
            RIGHT_PARENTHESIS@179..180 ")"
          ImportAlias@180..180
        LAYOUT_SEPARATOR@180..180 ""
        ImportStatement@180..200
          Annotation@180..181
            TEXT@180..181 "\n"
          IMPORT@181..187 "import"
          ModuleName@187..192
            Annotation@187..188
              TEXT@187..188 " "
            UPPER@188..192 "Prim"
          ImportList@192..192
          ImportAlias@192..200
            Annotation@192..193
              TEXT@192..193 " "
            AS@193..195 "as"
            ModuleName@195..200
              Annotation@195..196
                TEXT@195..196 " "
              UPPER@196..200 "Prim"
        LAYOUT_SEPARATOR@200..200 ""
        ImportStatement@200..231
          Annotation@200..201
            TEXT@200..201 "\n"
          IMPORT@201..207 "import"
          ModuleName@207..217
            Annotation@207..208
              TEXT@207..208 " "
            Qualifier@208..213
              TEXT@208..213 "Data."
            UPPER@213..217 "List"
          ImportList@217..231
            Annotation@217..218
              TEXT@217..218 " "
            HIDING@218..224 "hiding"
            Annotation@224..225
              TEXT@224..225 " "
            LEFT_PARENTHESIS@225..226 "("
            ImportValue@226..230
              LOWER@226..230 "cons"
            RIGHT_PARENTHESIS@230..231 ")"
          ImportAlias@231..231
        LAYOUT_SEPARATOR@231..231 ""
        ImportStatement@231..253
          Annotation@231..232
            TEXT@231..232 "\n"
          IMPORT@232..238 "import"
          ModuleName@238..247
            Annotation@238..239
              TEXT@238..239 " "
            UPPER@239..247 "Operator"
          ImportList@247..253
            Annotation@247..248
              TEXT@247..248 " "
            LEFT_PARENTHESIS@248..249 "("
            ImportOperator@249..252
              OPERATOR_NAME@249..252 "(+)"
            RIGHT_PARENTHESIS@252..253 ")"
          ImportAlias@253..253
        LAYOUT_SEPARATOR@253..253 ""
        ImportStatement@253..284
          Annotation@253..254
            TEXT@253..254 "\n"
          IMPORT@254..260 "import"
          ModuleName@260..273
            Annotation@260..261
              TEXT@260..261 " "
            UPPER@261..273 "TypeOperator"
          ImportList@273..284
            Annotation@273..274
              TEXT@273..274 " "
            LEFT_PARENTHESIS@274..275 "("
            ImportTypeOperator@275..283
              TYPE@275..279 "type"
              Annotation@279..280
                TEXT@279..280 " "
              OPERATOR_NAME@280..283 "(+)"
            RIGHT_PARENTHESIS@283..284 ")"
          ImportAlias@284..284
      ModuleStatements@284..284
      LAYOUT_END@284..284 ""
      Annotation@284..285
        TEXT@284..285 "\n"
      END_OF_FILE@285..285 ""
    ,
    [],
)
