crates/parsing/tests/snapshots/parser__newtype_equation.snap
---
source: crates/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..54
      ModuleHeader@0..28
        MODULE@0..6 "module"
        ModuleName@6..22
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..22 "NewtypeEquation"
        ExportList@22..22
        Annotation@22..23
          TEXT@22..23 " "
        WHERE@23..28 "where"
      LAYOUT_START@28..28 ""
      ModuleImports@28..28
      ModuleStatements@28..53
        NewtypeEquation@28..53
          Annotation@28..30
            TEXT@28..30 "\n\n"
          NEWTYPE@30..37 "newtype"
          Annotation@37..38
            TEXT@37..38 " "
          UPPER@38..42 "Year"
          Annotation@42..43
            TEXT@42..43 " "
          EQUAL@43..44 "="
          DataConstructor@44..53
            Annotation@44..45
              TEXT@44..45 " "
            UPPER@45..49 "Year"
            TypeConstructor@49..53
              QualifiedName@49..53
                Annotation@49..50
                  TEXT@49..50 " "
                UPPER@50..53 "Int"
      LAYOUT_END@53..53 ""
      Annotation@53..54
        TEXT@53..54 "\n"
      END_OF_FILE@54..54 ""
    ,
    [],
)
