crates/parsing/tests/snapshots/parser__non_reserved.snap
---
source: crates/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..66
      ModuleHeader@0..39
        MODULE@0..6 "module"
        Comment@6..7
          WHITESPACE@6..7 " "
        ModuleName@7..19
          UPPER@7..18 "NonReserved"
          Comment@18..19
            WHITESPACE@18..19 " "
        ModuleExportList@19..32
          LEFT_PARENTHESIS@19..20 "("
          ModuleExportValue@20..26
            LOWER@20..26 "hiding"
          COMMA@26..27 ","
          Comment@27..28
            WHITESPACE@27..28 " "
          ModuleExportValue@28..30
            LOWER@28..30 "as"
          RIGHT_PARENTHESIS@30..31 ")"
          Comment@31..32
            WHITESPACE@31..32 " "
        WHERE@32..37 "where"
        Comment@37..39
          WHITESPACE@37..39 "\n\n"
      LAYOUT_START@39..39 ""
      ModuleImports@39..39
      ModuleStatements@39..66
        ValueAnnotation@39..57
          LOWER@39..45 "hiding"
          Comment@45..46
            WHITESPACE@45..46 " "
          DOUBLE_COLON@46..48 "::"
          Comment@48..49
            WHITESPACE@48..49 " "
          TypeConstructor@49..57
            UPPER@49..55 "Hiding"
            Comment@55..57
              WHITESPACE@55..57 "\n\n"
        LAYOUT_SEPARATOR@57..57 ""
        ValueAnnotation@57..66
          LOWER@57..59 "as"
          Comment@59..60
            WHITESPACE@59..60 " "
          DOUBLE_COLON@60..62 "::"
          Comment@62..63
            WHITESPACE@62..63 " "
          TypeConstructor@63..66
            UPPER@63..65 "As"
            Comment@65..66
              WHITESPACE@65..66 "\n"
      LAYOUT_END@66..66 ""
      END_OF_FILE@66..66 ""
    ,
    [],
)
